Fix dropdown menu overflow

--- a/wp-content/themes/beyond/sass/components/_navigation-top.scss
+++ b/wp-content/themes/beyond/sass/components/_navigation-top.scss
@@ -584,15 +584,14 @@ input[type="search"] {
         }
         .sub-menu-col2 {
             margin-right: 25px;
-            width: calc(50% - 70px);
+            width: calc(50% - 50px);
         }
         .sub-menu-col1 ul,
         .sub-menu-col2 ul {
             display: block;
             position: relative;
-            span {
-                max-width: 320px;
-            }
+            width:100%
+            
         }
         .submenu {
             position: relative;
@@ -615,6 +614,12 @@ input[type="search"] {
             background-color: transparent;
             li {
                 width: 100%;
+                line-height: 1.2;
+                margin-bottom:.5rem;
+
+                .menu-item-description {
+                    margin-top: .2rem;
+                }
             }
         }
     }
